# inform7-ide

./: .clangd  .gitignore  .gitmodules  .travis.yml  AUTHORS  AUTHORS.md  BUILD.md  ChangeLog  INSTALL.md  Makefile.am  Makefile.in  NEWS  README  README.html  README.md  THANKS  TODO  aclocal.m4  apps.gnome-inform7.gschema.xml  autogen.sh  cloneurl  com.inform7.GUI.gschema.xml  com.inform7.IDE.appdata.xml  com.inform7.IDE.desktop.in  com.inform7.IDE.gschema.xml  config.h.in  configure  configure.ac  configure.in  description  gnome-inform7.desktop  gnome-inform7.desktop.in  gnome-inform7.glade  gnome-inform7.gladep  gnome-inform7.opensuse.spec  gnome-inform7.prj  gnome-inform7.pws  gnome-inform7.schemas  gnome-inform7.spec  gnome-inform7.spec.in  (+7 more)
data/: .gitignore  Makefile.am  Makefile.in  inform.lang  naturalinform.lang  naturalinformextension.lang
data/Compilers/: Makefile.am  Makefile.in  cBlorb  inform-6.31-biplatform  ni
data/Documentation/: Makefile.am  Rallegs.html  Rchap1.html  Rchap10.html  Rchap11.html  Rchap12.html  Rchap13.html  Rchap2.html  Rchap3.html  Rchap4.html  Rchap5.html  Rchap6.html  Rchap7.html  Rchap8.html  Rchap9.html  Rindex.html  allegs.html  chap1.html  chap10.html  chap11.html  chap12.html  chap13.html  chap14.html  chap15.html  chap16.html  chap17.html  chap18.html  chap19.html  chap2.html  chap20.html  chap21.html  chap22.html  chap23.html  chap24.html  chap25.html  chap3.html  chap4.html  chap5.html  chap6.html  chap7.html  (+7 more)
data/Inform7/: Makefile.am
data/Interpreters/: Makefile.am  dumb-glulxe
data/doc/: Makefile.am  Makefile.in  chap1.html  chap10.html  chap11.html  chap12.html  chap13.html  chap14.html  chap15.html  chap16.html  chap17.html  chap18.html  chap19.html  chap2.html  chap20.html  chap21.html  chap3.html  chap4.html  chap5.html  chap6.html  chap7.html  chap8.html  chap9.html  examples.html  extensions.html  index.html  manifest.txt  recipes.html
data/extensions/: Makefile.am  Makefile.in
data/highlighting/: Makefile.am  inform.lang  naturalinform.lang  naturalinformextension.lang
data/its/: Makefile.am  mime.its  mime.loc
data/languages/: Makefile.am  inform.lang  naturalinform.lang  naturalinformextension.lang
data/lib/: Makefile.am  Makefile.in
data/licenses/: Makefile.am  afl.html  artistic.html  chimara.html  e2fsuuid.html  freetype.html  git.html  gpl3.html  libjpeg.html  libpng.html  libxml2.html  license.html  license.html.in  luxi.html  osspuuid.html
data/map_icons/: Makefile.am
data/mime/: Makefile.am  com.inform7.IDE.xml.in  inform7.xml.in  mime.pot
data/scene_icons/: Makefile.am
data/styles/: Makefile.am  dark.xml  inform.xml  light.xml  monochrome.xml  nocolor-nostyling.xml  nocolor-somestyling.xml  nocolor-styling.xml  plain.xml  psychedelic-color-nostyling.xml  psychedelic-color-somestyling.xml  psychedelic-color-styling.xml  psychedelic-somecolor-nostyling.xml  psychedelic-somecolor-somestyling.xml  psychedelic-somecolor-styling.xml  psychedelic.xml  sevenseas.xml  standard-color-nostyling.xml  standard-color-somestyling.xml  standard-color-styling.xml  standard-somecolor-nostyling.xml  standard-somecolor-somestyling.xml  standard-somecolor-styling.xml  styles.its  styles.pot  subdued-color-nostyling.xml  subdued-color-somestyling.xml  subdued-color-styling.xml  subdued-somecolor-nostyling.xml  subdued-somecolor-somestyling.xml  subdued-somecolor-styling.xml  subdued.xml  subtle.xml  traditional.xml  update-pot.sh
data/ui/: Makefile.am  aboutwindow.ui.in  document.ui  extension.uimanager.xml  gnome-inform7.ui  newdialog.ui  panel.ui  panel.uimanager.xml  searchwindow.ui  source.ui  story.ui  story.uimanager.xml  welcomedialog.ui
pixmaps/: Makefile.am
src/: .gitignore  Makefile.am  Makefile.in  actions.c  actions.h  app-colorscheme.c  app-private.h  app-retrospective.c  app-retrospective.h  app.c  app.h  appmenu.c  appmenu.h  apptoolbar.c  apptoolbar.h  appwindow.c  appwindow.h  blob.c  blob.h  builder.c  builder.h  callbacks.c  callbacks.h  colorscheme.c  colorscheme.h  com.inform7.IDE.gresource.xml  compile.c  compile.h  configfile.c  configfile.h  datafile.c  datafile.h  diffseq.h  difftest.c  document-private.h  document-search.c  document.c  document.h  elastic.c  elastic.h  (+101 more)
src/cBlorb/: Contents.w  Makefile.am  Makefile.in  cblorb.c  meson.build
src/glulxe/: Makefile.am  Makefile.in  glulxe-inform7
src/gtk/: menus.ui
src/gtkterp/: License-gargoyle.txt  Makefile.am  Makefile.in  gtkterp.c  gtkterp.h
src/inform/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  VERSION  configure  configure.in
src/inform6/: Makefile.am  arrays.c  asm.c  bpatch.c  chars.c  directs.c  errors.c  expressp.c  files.c  header.h  inform.c  lexer.c  linker.c  memory.c  meson.build  objects.c  readme.txt  states.c  symbols.c  syntax.c  tables.c  text.c  veneer.c  verbs.c
src/inlib/: Contents.w  Makefile.am
src/interpreters/: Makefile.am  frotz.Makefile.am  git.Makefile.am  glulxe.Makefile.am
src/inweb/: .gitignore  Contents.w  Makefile.am  meson.build
src/inwebc/: Contents.w  Makefile.am
src/libchimara/: Makefile.am  abort.c  abort.h  case.c  charset.c  charset.h  chimara-glk-private.h  chimara-glk.c  chimara-glk.h  chimara-if.c  chimara-if.h  chimara-marshallers.txt  dispatch.c  event.c  event.h  fileref.c  fileref.h  garglk.c  garglk.h  gestalt.c  gi_blorb.c  glk.c  glk.h  glkunix.c  glkunix.h  graphics.c  graphics.h  hyperlink.c  hyperlink.h  init.c  init.h  input.c  input.h  magic.c  magic.h  mouse.c  mouse.h  pager.c  pager.h  resource.c  (+13 more)
src/ni/: .gitignore  Makefile.am
src/tests/: Lickable Wallpaper.i7x  Square Candies.i7x  app-test.c  app-test.h  blob-test.c  commands.rec  difftest.c  difftest.h  skein-test.c  skein-test.h  story-test.c  story-test.h  test.c  test_color_scheme.xml  text-buffer-excerpt-test.c
src/ui/: app.ui  application.css  blob.ui  document.ui  extension.ui  extension.uimanager.xml  gnome-inform7.ui  gnome-inform7.uimanager.xml  newdialog.ui  panel.ui  prefs.ui  project-settings.ui  searchbar.ui  searchwindow.ui  source.ui  story.ui  toast.ui  welcomedialog.ui  (+1 more)
(+2625 files in other folders)
